# filozofowie

./: CMakeLists.txt  ChandyMisraPhilosopher.cpp  ChandyMisraPhilosopher.h  Config.h  Fork.cpp  Fork.h  HierarchyPhilosopher.cpp  HierarchyPhilosopher.h  NaivePhilosopher.cpp  NaivePhilosopher.h  Philosopher.cpp  Philosopher.h  Table.cpp  Table.h  Utils.cpp  Utils.h  WaiterPhilosopher.cpp  WaiterPhilosopher.h  main.cpp
